--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "develop": "strapi develop",
     "build": "strapi build",
     "strapi": "strapi",
-    "start": "pm2 start yarn --maze -- start"
+    "start":"strapi start",
+    "pm2": "pm2 start yarn --maze -- start"
   },
   "devDependencies": {},
   "dependencies": {
