--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "develop": "strapi develop",
     "build": "strapi build",
     "strapi": "strapi",
-    "start":"strapi start",
-    "pm2": "pm2 start yarn --name maze server.js"
+    "pm2": "pm2 start server.js"
   },
   "devDependencies": {},
   "dependencies": {
